<resources>
    <string name="app_name">COB155CW</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Edit Session Page    -->
    <string name="Edit">Edit Session</string>
    <string name="editName"><u>Session Name</u></string>
    <string name="editDay"><u>Day</u></string>
    <string name="editType"><u>Session Type</u></string>
    <string name="editTime"><u>Time</u></string>
    <string name="editNotes"><u>Notes</u></string>
    <string name="namePlaceholder"><i>Enter Session Name...</i></string>
    <string name="DayPlaceholder">- Select A Day... -</string>
    <string name="TypePlaceholder">- Select Session Type... -</string>
    <string name="NotesPlaceholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Pellentesque placerat ipsum id magna ullamcorper, sed tristique neque tincidunt. Suspendisse
        lobortis felis ac dolor tempor laoreet pellentesque efficitur elit. Suspendisse potenti.
        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
        Ut tempus orci velit, eget aliquet justo dictum a. Phasellus pharetra quam a ante eleifend,
        non bibendum turpis porta. Nulla non arcu eget dolor bibendum iaculis</string>


    <!--Settings page-->
    <string name="settingsTitle">Settings</string>
    <string name="settingsLight"><u>Lighting</u></string>
    <string name="settingsLightMode">Light mode</string>
    <string name="settingsDarkMode">Dark mode</string>
    <string name="settingsLightBrightness">Brightness</string>
    <string name="settingsFeatures"><u>Added Features</u></string>
    <string name="settingsFeaturesSummary">Monthly summary</string>
    <string name="settingsFeaturesTime">Session time</string>
    <string name="settingsFeaturesNames">Unique names</string>
    <string name="settingsReset"><u>Session Reset</u></string>
    <string name="settingsResetRemove">Remove all sessions</string>

    <string name="Add_New">Add New</string>

    <string name="viewSession">View Session</string>

    <string name="choose_week">Choose Week</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment %s</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %s</string>
    <string name="title_activity_edit_session">EditSession</string>
    <string name="MainScreenTitle">Training / Week - %s</string>

    <string name="timeDisabled">Disabled</string>


    <string name="monthYear">%s %s</string>
    <string name="weekStart">Week Starting - %s</string>
    <string name="summary">%s Summary</string>
    <string name="toDo">%d Sessions to-do</string>
    <string name="done">%d Sessions completed</string>
    <string name="popSession">Mainly %s sessions in %s</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_view_session">ViewSession</string>
    <string name="title_activity_week_select">WeekSelect</string>
</resources>