<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/color_text"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:onClick="pauseTimer"
        android:text="Pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:onClick="resetTimer"
        android:text="Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="startTimer"
        android:text="Start"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="monospace"
        android:text="@string/Edit"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="144dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:soundEffectsEnabled="false"
        android:text="@string/editName"
        android:textColor="@color/color_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="144dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:soundEffectsEnabled="false"
        android:textColor="@color/color_text"
        android:text="@string/editTime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="144dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:textColor="@color/color_text"
        android:layout_marginTop="4dp"
        android:soundEffectsEnabled="false"
        android:text="@string/editNotes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="144dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:soundEffectsEnabled="false"
        android:textColor="@color/color_text"
        android:text="@string/editType"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="144dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:soundEffectsEnabled="false"
        android:text="@string/editDay"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/color_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="374dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/namePlaceholder"
        android:textColorHint="@color/color_text"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="Day"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="Type"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="371dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:gravity="start|top"
        android:textColorHint="@color/color_text"
        android:hint="@string/NotesPlaceholder"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="Return"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@null"
        android:contentDescription="Confirm"
        android:onClick="onSave"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>